/*
 * $Id: ChangeLog,v 1.2757 2004/04/05 20:29:01 fsgiudice Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-04-06 05:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    ! typo on trace info convert_create_flags -> convert_create_flags_ex
    ! define convert_create_flags() only when HB_FS_FILE_IO is defined and
      HB_WIN32_IO is not defined.
  * source/rtl/fserror.c
    ! define hb_errnoToDosError() only when HB_WIN32_IO is not defined
  * source/compiler/hbpcode.c
    ! function hb_compStrongType(): mark iSize as unused.
  * source/rtl/gtwvt/gtwvt.c
    ! remmed unused variable: iScanCode in line 1983

2004-04-05 22:36 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
  * source/rtl/bkgtsks.c
    * fixed typo ( HB_THRAED_OPTIMIZE_STACK -> HB_THREAD_OPTIMIZE_STACK )
      and added HB_THREAD_STUB in HB_BACKGROUNDRUN.
      Thanks to Sylvain Robert

2004-04-05 21:50 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
  * source/rtl/bkgtsks.c
    * fixed assignment of first task. Code cleaned.
  * hrbdll.bc
  * hrbdll.vc
    + Added source/rtl/fserror.c

2004-04-06 02:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    ! unbalance parenthesis in line 282
  * source/rtl/fserror.c
    ! guard ENOTDIR, ENFILE, EFAULT, EROFS, ESPIPE with "#if defined()" for
    compilers that have no defines for them.
  * source/rtl/gtwvt/gtwvt.c
    ! minor correction to put external variables initialized in mainwin.c
      into extern "C"

2004-04-05 16:48 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/fserror.c
    * ETXTBSY inside #ifdef ETXTBSY

  * xharbour/source/rtl/filesys.c
    * compilation fixes

  * xharbour/source/rtl/hbffind.c
    * use new error codes

2004-04-05 09:10 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)