@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2757 2004/04/05 20:29:01 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.2758 2004/04/05 22:25:39 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-05 19:45 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
+  * source/rtl/direct.c
+    ! fixed function directoryrecurse() to work on *nix
+
 2004-04-06 05:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/filesys.c
     ! typo on trace info convert_create_flags -> convert_create_flags_ex
